Fixed a wrapping issue.

--- a/clients/components/ThrowClient/ThrowClient.scss
+++ b/clients/components/ThrowClient/ThrowClient.scss
@@ -30,6 +30,7 @@ body {
     h1 {
       position: absolute;
       top: 8vh;
+      white-space: nowrap;
     }
   }
   .widget-temp-score {
